# fed_django

./: .dockerignore  .gitignore  Dockerfile  PROJECT_ARCHITECTURE.md  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  scheduler.py
core/: constants.py  middleware.py  settings.py  urls.py
multi_agent_systems/: admin.py  apps.py  helpers.py  models.py  schemas.py  services.py  urls.py  views.py
multi_agent_systems/dn_mas/: agent.py  instructions.py  runner.py  schemas.py
multi_agent_systems/management/commands/: test_dn_mas.py  test_st_mas.py
multi_agent_systems/migrations/: 0001_initial.py  0002_topicanalysisgroup_topicanalysis_topiccitation_and_more.py  0003_topicanalysisgroup_context.py  0004_summary_context_summary_fomc_announcement_datetime_and_more.py  0005_alter_summary_created_at_and_more.py  0006_systemmetadata.py
multi_agent_systems/st_mas/: agent.py  agent_helper_functions.py  instructions.py  runner.py  schemas.py
multi_agent_systems/templates/multi_agent_systems/: report_box.html  summary_detail.html  summary_empty.html  summary_list.html  topic_analysis_detail.html  topic_analysis_empty.html  topic_detail.html
news/: admin.py  models.py  selectors.py  services.py  urls.py  utils.py  views.py
news/migrations/: 0001_initial.py  0002_source_alter_fetchlog_message_article.py
static/css/: base.css  home.css  report_box.css  summaries.css  summary_detail.css  topic_analysis_detail.css  topic_detail.css
static/js/: home.js  report_box.js  summary_detail.js  topic_detail.js
templates/: base.html
(+5 files in other folders)
